docs/quick-start/nginx-ingress/echoserver/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  # - hosts:
  #   - echo.example.com
  #   secretName: echoserver-tls
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
